--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <title>DSA Cheatsheets</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>DSA Cheatsheets</h1>
   <ul>
-    <li><a href="patterns/fast-slow-pointer.html">Fast & Slow Pointer</a></li>
+    <li><a href="patterns/fast_slow_pointer_cheatsheet.html">Fast & Slow Pointer</a></li>
     <li><a href="patterns/sliding-window.html">Sliding Window</a></li>
   </ul>
 </body>
