Fix responsive layout with container and mobile styles

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>DSA Cheatsheets</h1>
-  <ul>
-    <li><a href="patterns/fast_slow_pointer_cheatsheet.html">Fast & Slow Pointer</a></li>
-    <li><a href="patterns/sliding-window.html">Sliding Window</a></li>
-  </ul>
+  <div class="container">
+    <h1>DSA Cheatsheets</h1>
+    <ul>
+      <li><a href="patterns/fast_slow_pointer_cheatsheet.html">Fast & Slow Pointer</a></li>
+      <li><a href="patterns/sliding-window.html">Sliding Window</a></li>
+    </ul>
+  </div>
 </body>
 </html>
