--- a/index.html
+++ b/index.html
@@ -1,5 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+  <script>
+    // Toggle dark mode and store preference
+    function toggleDarkMode() {
+      const body = document.body;
+      const current = body.getAttribute('data-theme');
+      const next = current === 'dark' ? 'light' : 'dark';
+      body.setAttribute('data-theme', next);
+      localStorage.setItem('theme', next);
+    }
+  
+    // Load saved theme on page load
+    window.onload = () => {
+      const saved = localStorage.getItem('theme') || 'light';
+      document.body.setAttribute('data-theme', saved);
+    }
+  </script>
+  
 <head>
   <meta charset="UTF-8" />
   <title>DSA Cheatsheets</title>
@@ -7,7 +24,25 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <button onclick="toggleDarkMode()" style="position:fixed;top:1rem;right:1rem;z-index:1000;">🌓</button>
   <div class="container">
+    <script>
+  // Toggle dark mode and store preference
+  function toggleDarkMode() {
+    const body = document.body;
+    const current = body.getAttribute('data-theme');
+    const next = current === 'dark' ? 'light' : 'dark';
+    body.setAttribute('data-theme', next);
+    localStorage.setItem('theme', next);
+  }
+
+  // Load saved theme on page load
+  window.onload = () => {
+    const saved = localStorage.getItem('theme') || 'light';
+    document.body.setAttribute('data-theme', saved);
+  }
+</script>
+
     <h1>DSA Cheatsheets</h1>
     <ul>
       <li><a href="patterns/fast_slow_pointer_cheatsheet.html">Fast & Slow Pointer</a></li>
