Add sliding window cheat sheet

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
     <h1>DSA Cheatsheets</h1>
     <ul>
       <li><a href="patterns/fast_slow_pointer_cheatsheet.html">Fast & Slow Pointer</a></li>
-      <li><a href="patterns/sliding-window.html">Sliding Window</a></li>
+      <li><a href="patterns/sliding_window_cheatsheet.html">Sliding Window</a></li>
+
     </ul>
   </div>
 </body>
