Adding animation for fast and slow pointer

--- a/patterns/fast_slow_pointer_cheatsheet.html
+++ b/patterns/fast_slow_pointer_cheatsheet.html
@@ -54,6 +54,8 @@ while (fast != null && fast.next != null) {
     }
     return false;
 }</code></pre>
+<button onclick="window.open('fast_slow_pointer_cycle_animation.html', '_blank')">▶️ View Animation</button>
+
 
     <h2>🧪 Example 2: Find Middle of Linked List</h2>
     <pre><code>public ListNode middleNode(ListNode head) {
@@ -64,6 +66,8 @@ while (fast != null && fast.next != null) {
     }
     return slow;
 }</code></pre>
+<button onclick="window.open('fast_slow_pointer_find_middle_linear.html', '_blank')">▶️ View Animation</button>
+
 
     <h2>💡 Pro Tips</h2>
     <ul>
