Adding leetcode links for fast and slow pointer

--- a/patterns/fast_slow_pointer_cheatsheet.html
+++ b/patterns/fast_slow_pointer_cheatsheet.html
@@ -37,12 +37,13 @@ while (fast != null && fast.next != null) {
 
     <h2>📘 Common LeetCode Problems</h2>
     <ul>
-      <li>141: Linked List Cycle</li>
-      <li>876: Middle of the Linked List</li>
-      <li>234: Palindrome Linked List</li>
-      <li>202: Happy Number</li>
-      <li>457: Circular Array Loop</li>
+      <li><a href="https://leetcode.com/problems/linked-list-cycle/" target="_blank" rel="noopener noreferrer">141: Linked List Cycle</a></li>
+      <li><a href="https://leetcode.com/problems/middle-of-the-linked-list/" target="_blank" rel="noopener noreferrer">876: Middle of the Linked List</a></li>
+      <li><a href="https://leetcode.com/problems/palindrome-linked-list/" target="_blank" rel="noopener noreferrer">234: Palindrome Linked List</a></li>
+      <li><a href="https://leetcode.com/problems/happy-number/" target="_blank" rel="noopener noreferrer">202: Happy Number</a></li>
+      <li><a href="https://leetcode.com/problems/circular-array-loop/" target="_blank" rel="noopener noreferrer">457: Circular Array Loop</a></li>
     </ul>
+    
 
     <h2>🧪 Example 1: Detect Cycle in Linked List</h2>
     <pre><code>public boolean hasCycle(ListNode head) {
