--- a/patterns/sliding_window_cheatsheet.html
+++ b/patterns/sliding_window_cheatsheet.html
@@ -65,6 +65,16 @@ for (int i = 0; i < nums.length; i++) {
         windowSum -= nums[i - k + 1];
     }
 }</code></pre>
+<p>
+  🎬 <a href="min_window_subsequence_animation.html" target="_blank" rel="noopener noreferrer">
+    Watch Minimum Window Subsequence Animation
+  </a>
+</p>
+<p>
+  🎬 <a href="sliding_window_maximum_animation.html" target="_blank" rel="noopener noreferrer">
+    Watch Sliding Window Maximum Animation
+  </a>
+</p>
 
     <h2>💡 Pro Tips</h2>
     <ul>
