--- a/patterns/sliding_window_cheatsheet.html
+++ b/patterns/sliding_window_cheatsheet.html
@@ -49,11 +49,11 @@ for (int right = 0; right < s.length(); right++) {
 
     <h2>📘 Common LeetCode Problems</h2>
     <ul>
-      <li>239: Sliding Window Maximum</li>
-      <li>3: Longest Substring Without Repeating Characters</li>
-      <li>76: Minimum Window Substring</li>
-      <li>209: Minimum Size Subarray Sum</li>
-      <li>424: Longest Repeating Character Replacement</li>
+      <li><a href="https://leetcode.com/problems/sliding-window-maximum/" target="_blank" rel="noopener noreferrer">239. Sliding Window Maximum</a></li>
+      <li><a href="https://leetcode.com/problems/minimum-window-subsequence/" target="_blank" rel="noopener noreferrer">727. Minimum Window Subsequence</a></li>
+      <li><a href="https://leetcode.com/problems/longest-repeating-character-replacement/" target="_blank" rel="noopener noreferrer">424. Longest Repeating Character Replacement</a></li>
+      <li><a href="https://leetcode.com/problems/permutation-in-string/" target="_blank" rel="noopener noreferrer">567. Permutation in String</a></li>
+      <li><a href="https://leetcode.com/problems/longest-substring-with-at-most-k-distinct-characters/" target="_blank" rel="noopener noreferrer">340. Longest Substring with At Most K Distinct Characters</a></li>
     </ul>
 
     <h2>🧪 Example: Max Sum of Size k</h2>
