updating sliding_window cheetseet

--- a/patterns/sliding_window_cheatsheet.html
+++ b/patterns/sliding_window_cheatsheet.html
@@ -49,11 +49,31 @@ for (int right = 0; right < s.length(); right++) {
 
     <h2>📘 Common LeetCode Problems</h2>
     <ul>
-      <li><a href="https://leetcode.com/problems/sliding-window-maximum/" target="_blank" rel="noopener noreferrer">239. Sliding Window Maximum</a></li>
-      <li><a href="https://leetcode.com/problems/minimum-window-subsequence/" target="_blank" rel="noopener noreferrer">727. Minimum Window Subsequence</a></li>
-      <li><a href="https://leetcode.com/problems/longest-repeating-character-replacement/" target="_blank" rel="noopener noreferrer">424. Longest Repeating Character Replacement</a></li>
-      <li><a href="https://leetcode.com/problems/permutation-in-string/" target="_blank" rel="noopener noreferrer">567. Permutation in String</a></li>
-      <li><a href="https://leetcode.com/problems/longest-substring-with-at-most-k-distinct-characters/" target="_blank" rel="noopener noreferrer">340. Longest Substring with At Most K Distinct Characters</a></li>
+      <li>
+        <a href="https://leetcode.com/problems/sliding-window-maximum/" target="_blank">239. Sliding Window Maximum</a>
+        <span style="color: #ef4444; font-weight: bold;">[Hard]</span>
+        <span style="color: #6366f1;">Sliding Window, Monotonic Queue</span>
+      </li>
+      <li>
+        <a href="https://leetcode.com/problems/minimum-window-subsequence/" target="_blank">727. Minimum Window Subsequence</a>
+        <span style="color: #f59e0b; font-weight: bold;">[Medium]</span>
+        <span style="color: #6366f1;">Sliding Window, Two Pointers, DP</span>
+      </li>
+      <li>
+        <a href="https://leetcode.com/problems/longest-repeating-character-replacement/" target="_blank">424. Longest Repeating Character Replacement</a>
+        <span style="color: #f59e0b; font-weight: bold;">[Medium]</span>
+        <span style="color: #6366f1;">Sliding Window, HashMap</span>
+      </li>
+      <li>
+        <a href="https://leetcode.com/problems/permutation-in-string/" target="_blank">567. Permutation in String</a>
+        <span style="color: #f59e0b; font-weight: bold;">[Medium]</span>
+        <span style="color: #6366f1;">Sliding Window, Two Pointers</span>
+      </li>
+      <li>
+        <a href="https://leetcode.com/problems/longest-substring-with-at-most-k-distinct-characters/" target="_blank">340. Longest Substring with At Most K Distinct Characters</a>
+        <span style="color: #f59e0b; font-weight: bold;">[Medium]</span>
+        <span style="color: #6366f1;">Sliding Window, HashMap</span>
+      </li>
     </ul>
 
     <h2>🧪 Example: Max Sum of Size k</h2>
