adding back boton and some updates

--- a/patterns/fast_slow_pointer_cheatsheet.html
+++ b/patterns/fast_slow_pointer_cheatsheet.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="container">
+    <p class="no-print"><a href="../index.html">← Back to Index</a></p>
     <h1>🐢🐇 Fast and Slow Pointer – Java Cheat Sheet (One Page)</h1>
 
     <h2>📌 What Is It?</h2>
