--- a/patterns/min_window_subsequence_animation.html
+++ b/patterns/min_window_subsequence_animation.html
@@ -22,6 +22,8 @@
   </style>
 </head>
 <body>
+  <p class="hide-print"><a href="sliding_window_cheatsheet.html">← Back to Sliding Window Cheatsheet</a></p>
+
   <h1>🐢 Minimum Window Subsequence – Pointer Move Fix</h1>
   <div class="label-bar">S1: "abcdebddeacbded"</div>
   <div class="label-bar">S2: "bde"</div>
