--- a/patterns/sliding_window_maximum_animation.html
+++ b/patterns/sliding_window_maximum_animation.html
@@ -99,6 +99,8 @@
   </style>
 </head>
 <body>
+    <p class="hide-print"><a href="sliding_window_cheatsheet.html">← Back to Sliding Window Cheatsheet</a></p>
+
   <h1>Sliding Window Maximum</h1>
 
   <div id="nums"></div>
