--- a/patterns/sliding_window_cheatsheet.html
+++ b/patterns/sliding_window_cheatsheet.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="container">
+    <p class="hide-print"><a href="../index.html">← Back to Index</a></p>
     <h1>🔍 Sliding Window – Java Cheat Sheet (One Page)</h1>
 
     <h2>📌 What Is It?</h2>
@@ -51,28 +52,28 @@ for (int right = 0; right < s.length(); right++) {
     <ul>
       <li>
         <a href="https://leetcode.com/problems/sliding-window-maximum/" target="_blank">239. Sliding Window Maximum</a>
-        <span style="color: #ef4444; font-weight: bold;">[Hard]</span>
-        <span style="color: #6366f1;">Sliding Window, Monotonic Queue</span>
+        <span class="badge badge-hard">[Hard]</span>
+        <span class="badge badge-tag">Sliding Window, Monotonic Queue</span>
       </li>
       <li>
         <a href="https://leetcode.com/problems/minimum-window-subsequence/" target="_blank">727. Minimum Window Subsequence</a>
-        <span style="color: #f59e0b; font-weight: bold;">[Medium]</span>
-        <span style="color: #6366f1;">Sliding Window, Two Pointers, DP</span>
+        <span class="badge badge-medium">[Medium]</span>
+        <span class="badge badge-tag">Sliding Window, Two Pointers, DP</span>
       </li>
       <li>
         <a href="https://leetcode.com/problems/longest-repeating-character-replacement/" target="_blank">424. Longest Repeating Character Replacement</a>
-        <span style="color: #f59e0b; font-weight: bold;">[Medium]</span>
-        <span style="color: #6366f1;">Sliding Window, HashMap</span>
+        <span class="badge badge-medium">[Medium]</span>
+        <span class="badge badge-tag">Sliding Window, HashMap</span>
       </li>
       <li>
         <a href="https://leetcode.com/problems/permutation-in-string/" target="_blank">567. Permutation in String</a>
-        <span style="color: #f59e0b; font-weight: bold;">[Medium]</span>
-        <span style="color: #6366f1;">Sliding Window, Two Pointers</span>
+        <span class="badge badge-medium">[Medium]</span>
+        <span class="badge badge-tag">Sliding Window, Two Pointers</span>
       </li>
       <li>
         <a href="https://leetcode.com/problems/longest-substring-with-at-most-k-distinct-characters/" target="_blank">340. Longest Substring with At Most K Distinct Characters</a>
-        <span style="color: #f59e0b; font-weight: bold;">[Medium]</span>
-        <span style="color: #6366f1;">Sliding Window, HashMap</span>
+        <span class="badge badge-medium">[Medium]</span>
+        <span class="badge badge-tag">Sliding Window, HashMap</span>
       </li>
     </ul>
 
@@ -85,12 +86,12 @@ for (int i = 0; i < nums.length; i++) {
         windowSum -= nums[i - k + 1];
     }
 }</code></pre>
-<p>
+<p class="hide-print">
   🎬 <a href="min_window_subsequence_animation.html" target="_blank" rel="noopener noreferrer">
     Watch Minimum Window Subsequence Animation
   </a>
 </p>
-<p>
+<p class="hide-print">
   🎬 <a href="sliding_window_maximum_animation.html" target="_blank" rel="noopener noreferrer">
     Watch Sliding Window Maximum Animation
   </a>
