--- a/patterns/sliding_window_cheatsheet.html
+++ b/patterns/sliding_window_cheatsheet.html
@@ -61,7 +61,7 @@ for (int right = 0; right < s.length(); right++) {
         <span class="badge badge-tag">Sliding Window, Two Pointers, DP</span>
       </li>
       <li>
-        <a href="https://leetcode.com/problems/longest-repeating-character-replacement/" target="_blank">424. Longest Repeating Character Replacement</a>
+        <a href="longest_repeating_character_replacement_cheatsheet.html" target="_blank">424. Longest Repeating Character Replacement</a>
         <span class="badge badge-medium">[Medium]</span>
         <span class="badge badge-tag">Sliding Window, HashMap</span>
       </li>
