updating sliding window problem

--- a/patterns/sliding_window_cheatsheet.html
+++ b/patterns/sliding_window_cheatsheet.html
@@ -75,6 +75,16 @@ for (int right = 0; right < s.length(); right++) {
         <span class="badge badge-medium">[Medium]</span>
         <span class="badge badge-tag">Sliding Window, HashMap</span>
       </li>
+      <li>
+        <a href="minimum_window_substring_cheatsheet.html" target="_blank">76. Minimum Window Substring</a>
+        <span class="badge badge-hard">[Hard]</span>
+        <span class="badge badge-tag">Sliding Window, HashMap</span>
+      </li>
+      <li>
+        <a href="longest_substring_without_repeating_characters_cheatsheet.html" target="_blank">3. Longest Substring Without Repeating Characters</a>
+        <span class="badge badge-medium">[Medium]</span>
+        <span class="badge badge-tag">Sliding Window, HashMap</span>
+      </li>
     </ul>
 
     <h2>🧪 Example: Max Sum of Size k</h2>
