--- a/patterns/fast_slow_pointer_cheatsheet.html
+++ b/patterns/fast_slow_pointer_cheatsheet.html
@@ -38,13 +38,32 @@ while (fast != null && fast.next != null) {
 
     <h2>📘 Common LeetCode Problems</h2>
     <ul>
-      <li><a href="https://leetcode.com/problems/linked-list-cycle/" target="_blank" rel="noopener noreferrer">141: Linked List Cycle</a></li>
-      <li><a href="https://leetcode.com/problems/middle-of-the-linked-list/" target="_blank" rel="noopener noreferrer">876: Middle of the Linked List</a></li>
-      <li><a href="https://leetcode.com/problems/palindrome-linked-list/" target="_blank" rel="noopener noreferrer">234: Palindrome Linked List</a></li>
-      <li><a href="https://leetcode.com/problems/happy-number/" target="_blank" rel="noopener noreferrer">202: Happy Number</a></li>
-      <li><a href="https://leetcode.com/problems/circular-array-loop/" target="_blank" rel="noopener noreferrer">457: Circular Array Loop</a></li>
+      <li>
+        <a href="https://leetcode.com/problems/linked-list-cycle/" target="_blank" rel="noopener noreferrer">141: Linked List Cycle</a>
+        <span class="badge badge-easy">[Easy]</span>
+        <span class="badge badge-tag">Fast & Slow Pointer</span>
+      </li>
+      <li>
+        <a href="https://leetcode.com/problems/middle-of-the-linked-list/" target="_blank" rel="noopener noreferrer">876: Middle of the Linked List</a>
+        <span class="badge badge-easy">[Easy]</span>
+        <span class="badge badge-tag">Fast & Slow Pointer</span>
+      </li>
+      <li>
+        <a href="https://leetcode.com/problems/palindrome-linked-list/" target="_blank" rel="noopener noreferrer">234: Palindrome Linked List</a>
+        <span class="badge badge-medium">[Medium]</span>
+        <span class="badge badge-tag">Fast & Slow Pointer, Two Pointers</span>
+      </li>
+      <li>
+        <a href="https://leetcode.com/problems/happy-number/" target="_blank" rel="noopener noreferrer">202: Happy Number</a>
+        <span class="badge badge-easy">[Easy]</span>
+        <span class="badge badge-tag">Fast & Slow Pointer, Math</span>
+      </li>
+      <li>
+        <a href="https://leetcode.com/problems/circular-array-loop/" target="_blank" rel="noopener noreferrer">457: Circular Array Loop</a>
+        <span class="badge badge-medium">[Medium]</span>
+        <span class="badge badge-tag">Fast & Slow Pointer, Array</span>
+      </li>
     </ul>
-    
 
     <h2>🧪 Example 1: Detect Cycle in Linked List</h2>
     <pre><code>public boolean hasCycle(ListNode head) {
@@ -58,7 +77,6 @@ while (fast != null && fast.next != null) {
 }</code></pre>
 <button onclick="window.open('fast_slow_pointer_cycle_animation.html', '_blank')">▶️ View Animation</button>
 
-
     <h2>🧪 Example 2: Find Middle of Linked List</h2>
     <pre><code>public ListNode middleNode(ListNode head) {
     ListNode slow = head, fast = head;
@@ -69,7 +87,6 @@ while (fast != null && fast.next != null) {
     return slow;
 }</code></pre>
 <button onclick="window.open('fast_slow_pointer_find_middle_linear.html', '_blank')">▶️ View Animation</button>
-
 
     <h2>💡 Pro Tips</h2>
     <ul>
