--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
     <ul>
       <li><a href="patterns/fast_slow_pointer_cheatsheet.html">Fast & Slow Pointer</a></li>
       <li><a href="patterns/sliding_window_cheatsheet.html">Sliding Window</a></li>
-
+      <li><a href="patterns/merge_intervals_cheatsheet.html">Merge Intervals</a></li>
+      <li><a href="patterns/in_place_linked_list_cheatsheet.html">In-Place Manipulation of a Linked List</a></li>
     </ul>
   </div>
 </body>
