adding example for merge interval problems

--- a/patterns/merge_intervals_cheatsheet.html
+++ b/patterns/merge_intervals_cheatsheet.html
@@ -68,9 +68,14 @@
           <span class="badge badge-tag">Sorting, Intervals</span>
         </li>
         <li>
-          <a href="https://leetcode.com/problems/employee-free-time/" target="_blank" rel="noopener noreferrer">759: Employee Free Time</a>
+          <a href="employee_free_time_cheatsheet.html" target="_blank" rel="noopener noreferrer">759: Employee Free Time</a>
           <span class="badge badge-hard">[Hard]</span>
           <span class="badge badge-tag">Sorting, Intervals</span>
+        </li>
+        <li>
+            <a href="meeting_rooms_ii_cheatsheet.html" target="_blank" rel="noopener noreferrer">253: Meeting Rooms II</a>
+            <span class="badge badge-medium">[Medium]</span>
+            <span class="badge badge-tag">Heap, Intervals</span>
         </li>
         <li>
           <a href="https://leetcode.com/problems/interval-list-intersections/" target="_blank" rel="noopener noreferrer">986: Interval List Intersections</a>
