--- a/patterns/employee_free_time_cheatsheet.html
+++ b/patterns/employee_free_time_cheatsheet.html
@@ -69,6 +69,7 @@
     <pre><code>Input: schedule = [[[1,2],[5,6]],[[1,3]],[[4,10]]]
 Output: [[3,4]]
 Explanation: There is a free time gap between [3,4].</code></pre>
+<button onclick="window.open('../animations/employee_free_time_animation.html', '_blank')">▶️ View Animation</button>
 
     <h2>💡 Pro Tips</h2>
     <ul>
