--- a/patterns/insert_interval_cheatsheet.html
+++ b/patterns/insert_interval_cheatsheet.html
@@ -71,7 +71,7 @@
     <pre><code>Input: intervals = [[1,3],[6,9]], newInterval = [2,5]
 Output: [[1,5],[6,9]]
 Explanation: The new interval [2,5] overlaps with [1,3], so they are merged into [1,5].</code></pre>
-
+<button onclick="window.open('../animations/insert_interval_animation.html', '_blank')">▶️ View Animation</button>
     <h2>💡 Pro Tips</h2>
     <ul>
       <li>Handle intervals before, overlapping, and after the new interval separately</li>
