adding linked list problems

--- a/patterns/in_place_linked_list_cheatsheet.html
+++ b/patterns/in_place_linked_list_cheatsheet.html
@@ -67,26 +67,42 @@ public void reorderList(ListNode head) {
 
     <h2>📘 Common LeetCode Problems</h2>
     <ul>
-      <li>
-        <a href="https://leetcode.com/problems/reverse-linked-list/" target="_blank" rel="noopener noreferrer">206: Reverse Linked List</a>
-        <span class="badge badge-easy">[Easy]</span>
-        <span class="badge badge-tag">Linked List</span>
-      </li>
-      <li>
-        <a href="https://leetcode.com/problems/reorder-list/" target="_blank" rel="noopener noreferrer">143: Reorder List</a>
-        <span class="badge badge-medium">[Medium]</span>
-        <span class="badge badge-tag">Linked List</span>
-      </li>
-      <li>
-        <a href="https://leetcode.com/problems/palindrome-linked-list/" target="_blank" rel="noopener noreferrer">234: Palindrome Linked List</a>
-        <span class="badge badge-easy">[Easy]</span>
-        <span class="badge badge-tag">Linked List</span>
-      </li>
-    </ul>
+        <li>
+          <a href="https://leetcode.com/problems/reverse-linked-list/" target="_blank" rel="noopener noreferrer">206: Reverse Linked List</a>
+          <span class="badge badge-easy">[Easy]</span>
+          <span class="badge badge-tag">Linked List</span>
+        </li>
+        <li>
+          <a href="https://leetcode.com/problems/reverse-linked-list-ii/" target="_blank" rel="noopener noreferrer">92: Reverse Linked List II</a>
+          <span class="badge badge-medium">[Medium]</span>
+          <span class="badge badge-tag">Linked List</span>
+        </li>
+        <li>
+          <a href="reverse_nodes_k_group_cheatsheet.html" target="_blank" rel="noopener noreferrer">25: Reverse Nodes in K-Group</a>
+          <span class="badge badge-hard">[Hard]</span>
+          <span class="badge badge-tag">Linked List</span>
+        </li>
+        <li>
+          <a href="https://leetcode.com/problems/reorder-list/" target="_blank" rel="noopener noreferrer">143: Reorder List</a>
+          <span class="badge badge-medium">[Medium]</span>
+          <span class="badge badge-tag">Linked List</span>
+        </li>
+        <li>
+          <a href="https://leetcode.com/problems/rotate-list/" target="_blank" rel="noopener noreferrer">61: Rotate List</a>
+          <span class="badge badge-medium">[Medium]</span>
+          <span class="badge badge-tag">Linked List</span>
+        </li>
+        <li>
+          <a href="https://leetcode.com/problems/palindrome-linked-list/" target="_blank" rel="noopener noreferrer">234: Palindrome Linked List</a>
+          <span class="badge badge-easy">[Easy]</span>
+          <span class="badge badge-tag">Linked List</span>
+        </li>
+      </ul>
 
     <h2>🧪 Example: Reverse a Linked List</h2>
     <pre><code>Input: head = [1,2,3,4,5]
 Output: [5,4,3,2,1]</code></pre>
+<button onclick="window.open('../animations/reversed_improved_animation.html', '_blank')">▶️ View Animation</button>
 
     <h2>💡 Pro Tips</h2>
     <ul>
