adding heap problems

--- a/patterns/in_place_linked_list_cheatsheet.html
+++ b/patterns/in_place_linked_list_cheatsheet.html
@@ -73,7 +73,7 @@ public void reorderList(ListNode head) {
           <span class="badge badge-tag">Linked List</span>
         </li>
         <li>
-          <a href="https://leetcode.com/problems/reverse-linked-list-ii/" target="_blank" rel="noopener noreferrer">92: Reverse Linked List II</a>
+          <a href="reverse_linked_list_ii_cheatsheet.html" target="_blank" rel="noopener noreferrer">92: Reverse Linked List II</a>
           <span class="badge badge-medium">[Medium]</span>
           <span class="badge badge-tag">Linked List</span>
         </li>
