--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       <li><a href="patterns/sliding_window_cheatsheet.html">Sliding Window</a></li>
       <li><a href="patterns/merge_intervals_cheatsheet.html">Merge Intervals</a></li>
       <li><a href="patterns/in_place_linked_list_cheatsheet.html">In-Place Manipulation of a Linked List</a></li>
+      <li><a href="patterns/heap_cheatsheet.html">Heap</a></li>
     </ul>
   </div>
 </body>
