--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       <li><a href="patterns/merge_intervals_cheatsheet.html">Merge Intervals</a></li>
       <li><a href="patterns/in_place_linked_list_cheatsheet.html">In-Place Manipulation of a Linked List</a></li>
       <li><a href="patterns/heap_cheatsheet.html">Heap</a></li>
+      <li><a href="patterns/k_way_merge_cheatsheet.html">K-Way Merge</a></li>
     </ul>
   </div>
 </body>
