--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       <li><a href="patterns/in_place_linked_list_cheatsheet.html">In-Place Manipulation of a Linked List</a></li>
       <li><a href="patterns/heap_cheatsheet.html">Heap</a></li>
       <li><a href="patterns/k_way_merge_cheatsheet.html">K-Way Merge</a></li>
+      <li><a href="patterns/top_k_elements_cheatsheet.html">Top K Elements</a></li>
     </ul>
   </div>
 </body>
