--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       <li><a href="patterns/heap_cheatsheet.html">Heap</a></li>
       <li><a href="patterns/k_way_merge_cheatsheet.html">K-Way Merge</a></li>
       <li><a href="patterns/top_k_elements_cheatsheet.html">Top K Elements</a></li>
+      <li><a href="patterns/modified_binary_search_cheatsheet.html">Modified Binary Search</a></li>
     </ul>
   </div>
 </body>
