adding greedy techniques pattren

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
       <li><a href="patterns/top_k_elements_cheatsheet.html">Top K Elements</a></li>
       <li><a href="patterns/modified_binary_search_cheatsheet.html">Modified Binary Search</a></li>
       <li><a href="patterns/subsets_cheatsheet.html">Subset Pattern</a></li>
+      <li><a href="patterns/greedy_techniques_pattren_cheatsheet.html">Greedy Techniques</a></li>
+
     </ul>
   </div>
 </body>
