adding backtracking pattren

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       <li><a href="patterns/modified_binary_search_cheatsheet.html">Modified Binary Search</a></li>
       <li><a href="patterns/subsets_cheatsheet.html">Subset Pattern</a></li>
       <li><a href="patterns/greedy_techniques_pattren_cheatsheet.html">Greedy Techniques</a></li>
+      <li><a href="patterns/backtracking_cheatsheet.html">Backtracking Pattern</a></li>
 
     </ul>
   </div>
