Adding DP pattren

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
       <li><a href="patterns/subsets_cheatsheet.html">Subset Pattern</a></li>
       <li><a href="patterns/greedy_techniques_pattren_cheatsheet.html">Greedy Techniques</a></li>
       <li><a href="patterns/backtracking_cheatsheet.html">Backtracking Pattern</a></li>
+      <li><a href="patterns/dynamic_programming_pattern_cheatsheet.html">Dynamic Programming Pattern</a></li>
 
     </ul>
   </div>
