--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       <li><a href="patterns/greedy_techniques_pattren_cheatsheet.html">Greedy Techniques</a></li>
       <li><a href="patterns/backtracking_cheatsheet.html">Backtracking Pattern</a></li>
       <li><a href="patterns/dynamic_programming_pattern_cheatsheet.html">Dynamic Programming Pattern</a></li>
+      <li><a href="patterns/cyclic_sort_pattren_cheatsheet.html">Cyclic Sort Pattern</a></li>
 
     </ul>
   </div>
