--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       <li><a href="patterns/dynamic_programming_pattern_cheatsheet.html">Dynamic Programming Pattern</a></li>
       <li><a href="patterns/cyclic_sort_pattren_cheatsheet.html">Cyclic Sort Pattern</a></li>
       <li><a href="patterns/topological_sort_cheatsheet.html">Topological Sort Pattern</a></li>
+      <li><a href="patterns/stacks_cheatsheet.html">Stack Pattern</a></li>
 
     </ul>
   </div>
