Adding graph pattren

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       <li><a href="patterns/cyclic_sort_pattren_cheatsheet.html">Cyclic Sort Pattern</a></li>
       <li><a href="patterns/topological_sort_cheatsheet.html">Topological Sort Pattern</a></li>
       <li><a href="patterns/stacks_cheatsheet.html">Stack Pattern</a></li>
+      <li><a href="patterns/graphs_cheatsheet.html">Graph Pattern</a></li>
 
     </ul>
   </div>
