Adding tree BFS pattren animation

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
       <li><a href="patterns/topological_sort_cheatsheet.html">Topological Sort Pattern</a></li>
       <li><a href="patterns/stacks_cheatsheet.html">Stack Pattern</a></li>
       <li><a href="patterns/graphs_cheatsheet.html">Graph Pattern</a></li>
-
+      <li><a href="patterns/tree_depth_first_search_cheatsheet.html">Tree DFS Pattern</a></li>
+      <li><a href="patterns/tree_breadth_first_search_cheatsheet.html">Tree BFS Pattern</a></li>
     </ul>
   </div>
 </body>
