--- a/patterns/closest_node_to_path_in_tree_cheatsheet.html
+++ b/patterns/closest_node_to_path_in_tree_cheatsheet.html
@@ -70,6 +70,9 @@ class Solution {
     }
 }
 </code></pre>
+<button onclick="window.location.href='../animations/closest_node_to_path_in_tree_animation.html'" class="animation-btn">
+    ▶️ View Animation
+</button>
     <p>
     <b>How it works:</b> For each query, use DFS to find the path from <code>start</code> to <code>end</code> and mark all nodes on the path. Then use BFS from <code>node</code> to find the closest node on the path.
     </p>
