--- a/patterns/find_minimum_diameter_after_merging_two_trees_cheatsheet.html
+++ b/patterns/find_minimum_diameter_after_merging_two_trees_cheatsheet.html
@@ -93,6 +93,9 @@ class Solution {
     }
 }
 </code></pre>
+<button onclick="window.location.href='../animations/find_minimum_diameter_after_merging_two_trees_animation.html'" class="animation-btn">
+    ▶️ View Animation
+</button>
     <p>
     <b>How it works:</b> Compute the diameter and height of both trees using BFS. The minimum diameter after merging is the maximum of the two original diameters and the sum of their heights plus one (for the new edge).
     </p>
