--- a/patterns/symmetric_tree_cheatsheet.html
+++ b/patterns/symmetric_tree_cheatsheet.html
@@ -31,6 +31,9 @@ class Solution {
     }
 }
 </code></pre>
+<button onclick="window.location.href='../animations/symmetric_tree_dfs_animation.html'" class="animation-btn">
+    ▶️ View Animation
+</button>
     <p>
     <b>How it works:</b> Recursively compare left and right subtrees. They must be mirrors at every level for the tree to be symmetric.
     </p>
@@ -58,6 +61,9 @@ class Solution {
     }
 }
 </code></pre>
+<button onclick="window.location.href='../animations/symmetric_tree_bfs_animation.html'" class="animation-btn">
+    ▶️ View Animation
+</button>
     <p>
     <b>How it works:</b> Use a queue to compare nodes in pairs. Always compare left of one subtree with right of the other. If all pairs match, the tree is symmetric.
     </p>
