--- a/patterns/tree_breadth_first_search_cheatsheet.html
+++ b/patterns/tree_breadth_first_search_cheatsheet.html
@@ -38,7 +38,7 @@
     }
 }
 </code></pre>
-<button onclick="window.location.href='../animations/tree_breadth_first_search_animation.html'" class="animation-btn">
+<button onclick="window.location.href='../animations/binary_tree_level_order_traversal_animation.html'" class="animation-btn">
     ▶️ View Animation
 </button>
 
@@ -61,6 +61,157 @@
             <li>Repeat until all levels are processed</li>
         </ol>
 
+<h2>📘 Common LeetCode BFS Problems</h2>
+<div class="problems-section">
+    <h3 class="problems-header easy">🟢 Easy Problems</h3>
+    <ul class="problems-list">
+        <li>
+            <div class="problem-card easy">
+                <div class="problem-title">
+                    Binary Tree Level Order Traversal
+                    <span class="badge badge-easy">Easy</span>
+                </div>
+                <div class="problem-actions">
+                    <a href="https://leetcode.com/problems/binary-tree-level-order-traversal/" target="_blank" class="leetcode-link">LeetCode</a>
+                    <a href="binary_tree_level_order_traversal_cheatsheet.html" class="cheatsheet-link">Cheat Sheet</a>
+                </div>
+                <div class="problem-notes">
+                    Traverse tree level by level using BFS.
+                </div>
+            </div>
+        </li>
+        <li>
+            <div class="problem-card easy">
+                <div class="problem-title">
+                    Symmetric Tree
+                    <span class="badge badge-easy">Easy</span>
+                </div>
+                <div class="problem-actions">
+                    <a href="https://leetcode.com/problems/symmetric-tree/" target="_blank" class="leetcode-link">LeetCode</a>
+                    <a href="symmetric_tree_cheatsheet.html" class="cheatsheet-link">Cheat Sheet</a>
+                </div>
+                <div class="problem-notes">
+                    Check if tree is symmetric using BFS or DFS.
+                </div>
+            </div>
+        </li>
+        <li>
+            <div class="problem-card easy">
+                <div class="problem-title">
+                    Two Sum IV - Input Is a BST
+                    <span class="badge badge-easy">Easy</span>
+                </div>
+                <div class="problem-actions">
+                    <a href="https://leetcode.com/problems/two-sum-iv-input-is-a-bst/" target="_blank" class="leetcode-link">LeetCode</a>
+                    <a href="two_sum_iv_cheatsheet.html" class="cheatsheet-link">Cheat Sheet</a>
+                </div>
+                <div class="problem-notes">
+                    Find if there exist two elements in BST that sum to target.
+                </div>
+            </div>
+        </li>
+    </ul>
+
+    <h3 class="problems-header medium">🟡 Medium Problems</h3>
+    <ul class="problems-list">
+        <li>
+            <div class="problem-card medium">
+                <div class="problem-title">
+                    Binary Tree Zigzag Level Order Traversal
+                    <span class="badge badge-medium">Medium</span>
+                </div>
+                <div class="problem-actions">
+                    <a href="https://leetcode.com/problems/binary-tree-zigzag-level-order-traversal/" target="_blank" class="leetcode-link">LeetCode</a>
+                    <a href="binary_tree_zigzag_level_order_traversal_cheatsheet.html" class="cheatsheet-link">Cheat Sheet</a>
+                </div>
+                <div class="problem-notes">
+                    Alternate left-right traversal at each level.
+                </div>
+            </div>
+        </li>
+        <li>
+            <div class="problem-card medium">
+                <div class="problem-title">
+                    Populating Next Right Pointers in Each Node
+                    <span class="badge badge-medium">Medium</span>
+                </div>
+                <div class="problem-actions">
+                    <a href="https://leetcode.com/problems/populating-next-right-pointers-in-each-node/" target="_blank" class="leetcode-link">LeetCode</a>
+                    <a href="populating_next_right_pointers_cheatsheet.html" class="cheatsheet-link">Cheat Sheet</a>
+                </div>
+                <div class="problem-notes">
+                    Connect nodes at the same level using BFS.
+                </div>
+            </div>
+        </li>
+        <li>
+            <div class="problem-card medium">
+                <div class="problem-title">
+                    Vertical Order Traversal of a Binary Tree
+                    <span class="badge badge-medium">Medium</span>
+                </div>
+                <div class="problem-actions">
+                    <a href="https://leetcode.com/problems/vertical-order-traversal-of-a-binary-tree/" target="_blank" class="leetcode-link">LeetCode</a>
+                    <a href="vertical_order_traversal_cheatsheet.html" class="cheatsheet-link">Cheat Sheet</a>
+                </div>
+                <div class="problem-notes">
+                    Group nodes by vertical columns using BFS.
+                </div>
+            </div>
+        </li>
+        <li>
+            <div class="problem-card medium">
+                <div class="problem-title">
+                    Word Ladder
+                    <span class="badge badge-medium">Medium</span>
+                </div>
+                <div class="problem-actions">
+                    <a href="https://leetcode.com/problems/word-ladder/" target="_blank" class="leetcode-link">LeetCode</a>
+                    <a href="word_ladder_cheatsheet.html" class="cheatsheet-link">Cheat Sheet</a>
+                </div>
+                <div class="problem-notes">
+                    Find shortest transformation sequence using BFS.
+                </div>
+            </div>
+        </li>
+
+    </ul>
+
+    <h3 class="problems-header hard">🔴 Hard Problems</h3>
+    <ul class="problems-list">
+        <li>
+            <div class="problem-card hard">
+                <div class="problem-title">
+                    Find Minimum Diameter After Merging Two Trees
+                    <span class="badge badge-hard">Hard</span>
+                </div>
+                <div class="problem-actions">
+                    <a href="https://leetcode.com/problems/find-minimum-diameter-after-merging-two-trees/" target="_blank" class="leetcode-link">LeetCode</a>
+                    <a href="find_minimum_diameter_after_merging_two_trees_cheatsheet.html" class="cheatsheet-link">Cheat Sheet</a>
+                </div>
+                <div class="problem-notes">
+                    Merge trees and compute minimum diameter using BFS.
+                </div>
+            </div>
+        </li>
+        <li>
+            <div class="problem-card hard">
+                <div class="problem-title">
+                    Closest Node to Path in Tree
+                    <span class="badge badge-hard">Hard</span>
+                </div>
+                <div class="problem-actions">
+                    <a href="https://leetcode.com/problems/closest-node-to-path-in-tree/" target="_blank" class="leetcode-link">LeetCode</a>
+                    <a href="closest_node_to_path_in_tree_cheatsheet.html" class="cheatsheet-link">Cheat Sheet</a>
+                </div>
+                <div class="problem-notes">
+                    Find closest node to a given path using BFS.
+                </div>
+            </div>
+        </li>
+    </ul>
+</div>
+
         <h2>⚠️ Edge Cases to Consider</h2>
         <ul>
             <li>Empty tree (return empty list)</li>
@@ -73,7 +224,85 @@
 Output: [[3],[9,20],[15,7]]
 Explanation: The tree is traversed level by level.
 </code></pre>
-    </div>
-    
+<style>
+.problems-section {
+    margin-bottom: 32px;
+    margin-top: 32px;
+    padding-bottom: 10px;
+}
+.problems-header {
+    font-size: 1.2em;
+    margin-top: 24px;
+    margin-bottom: 12px;
+    font-weight: bold;
+}
+.problems-header.easy { color: #28a745; }
+.problems-header.medium { color: #ffc107; }
+.problems-header.hard { color: #dc3545; }
+.problems-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+.problem-card {
+    background: #f8f9fa;
+    border-radius: 8px;
+    margin-bottom: 14px;
+    padding: 16px 18px 10px 18px;
+    box-shadow: 0 2px 8px rgba(44,62,80,0.04);
+    border-left: 6px solid #dee2e6;
+    transition: box-shadow 0.2s, border-color 0.2s;
+}
+.problem-card.easy { border-color: #28a745; }
+.problem-card.medium { border-color: #ffc107; }
+.problem-card.hard { border-color: #dc3545; }
+.problem-card:hover {
+    box-shadow: 0 4px 16px rgba(44,62,80,0.10);
+    border-left-width: 10px;
+}
+.problem-title {
+    font-weight: bold;
+    font-size: 1.08em;
+    margin-bottom: 4px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+.badge {
+    padding: 3px 10px;
+    border-radius: 12px;
+    font-size: 12px;
+    margin-left: 8px;
+    font-weight: 500;
+}
+.badge-easy { background: #28a745; color: white; }
+.badge-medium { background: #ffc107; color: black; }
+.badge-hard { background: #dc3545; color: white; }
+.problem-actions {
+    margin-bottom: 6px;
+}
+.problem-actions a {
+    display: inline-block;
+    margin-right: 12px;
+    padding: 4px 12px;
+    border-radius: 6px;
+    background: #e9ecef;
+    color: #007bff;
+    text-decoration: none;
+    font-size: 0.97em;
+    border: 1px solid #dee2e6;
+    transition: background 0.2s, color 0.2s;
+}
+.problem-actions a:hover {
+    background: #007bff;
+    color: #fff;
+}
+.problem-notes {
+    font-size: 0.93em;
+    color: #6c757d;
+    margin-bottom: 2px;
+    margin-top: 2px;
+}
+</style>
 </body>
 </html>
