--- a/patterns/two_sum_iv_cheatsheet.html
+++ b/patterns/two_sum_iv_cheatsheet.html
@@ -31,6 +31,9 @@ class Solution {
     }
 }
 </code></pre>
+<button onclick="window.location.href='../animations/two_sum_iv_dfs_animation.html'" class="animation-btn">
+    ▶️ View Animation
+</button>
     <p>
     <b>How it works:</b> Traverse the tree with DFS, storing visited values in a set. For each node, check if (target - node.val) exists in the set.
     </p>
@@ -53,6 +56,9 @@ class Solution {
     }
 }
 </code></pre>
+<button onclick="window.location.href='../animations/two_sum_iv_bfs_animation.html'" class="animation-btn">
+    ▶️ View Animation
+</button>
 <p>
 <b>How it works:</b> Use BFS to traverse the tree level by level, storing visited values in a set. For each node, check if (target - node.val) exists in the set.
 </p>
