--- a/patterns/vertical_order_traversal_cheatsheet.html
+++ b/patterns/vertical_order_traversal_cheatsheet.html
@@ -48,6 +48,9 @@ class Solution {
     }
 }
 </code></pre>
+<button onclick="window.location.href='../animations/vertical_order_traversal_bfs_animation.html'" class="animation-btn">
+    ▶️ View Animation
+</button>
     <p>
     <b>How it works:</b> Use BFS to traverse the tree, tracking each node's column and row. Store values in a TreeMap by column and row, using a PriorityQueue to sort values at the same position. Build the result column by column, top to bottom, and left to right.
     </p>
@@ -87,6 +90,9 @@ class Solution {
     }
 }
 </code></pre>
+<button onclick="window.location.href='../animations/vertical_order_traversal_dfs_animation.html'" class="animation-btn">
+    ▶️ View Animation
+</button>
     <p>
     <b>How it works:</b> Use DFS to collect each node's column and level. Store values in a TreeMap by column and level. Sort values at the same position, then build the result column by column, top to bottom, and left to right.
     </p>
