--- a/patterns/word_ladder_cheatsheet.html
+++ b/patterns/word_ladder_cheatsheet.html
@@ -52,6 +52,9 @@ class Solution {
     }
 }
 </code></pre>
+<button onclick="window.location.href='../animations/word_ladder_animation.html'" class="animation-btn">
+    ▶️ View Animation
+</button>
     <p>
     <b>How it works:</b> Use BFS to explore all possible one-letter transformations. Each level of BFS represents a transformation step. Stop when the end word is found.
     </p>
