--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
       <li><a href="patterns/graphs_cheatsheet.html">Graph Pattern</a></li>
       <li><a href="patterns/tree_depth_first_search_cheatsheet.html">Tree DFS Pattern</a></li>
       <li><a href="patterns/tree_breadth_first_search_cheatsheet.html">Tree BFS Pattern</a></li>
+      <li><a href="patterns/trie_pattern_cheatsheet.html">Trie Pattern</a></li>
+
     </ul>
   </div>
 </body>
