Adding hashmap and union find  pattren animation

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
       <li><a href="patterns/tree_depth_first_search_cheatsheet.html">Tree DFS Pattern</a></li>
       <li><a href="patterns/tree_breadth_first_search_cheatsheet.html">Tree BFS Pattern</a></li>
       <li><a href="patterns/trie_pattern_cheatsheet.html">Trie Pattern</a></li>
+      <li><a href="patterns/hashmap_pattern_cheatsheet.html">HashMap Pattern</a></li>
+      <li><a href="patterns/union_find_pattern_cheatsheet.html">Union Find Pattern</a></li>
 
     </ul>
   </div>
