Adding hashmap  pattren animation

--- a/patterns/custom_sort_string_cheatsheet.html
+++ b/patterns/custom_sort_string_cheatsheet.html
@@ -33,6 +33,9 @@ class Solution {
     }
 }
 </code></pre>
+<button onclick="window.location.href='../animations/custom_sort_string_animation.html'" class="animation-btn">
+    ▶️ View Animation
+</button>
 
         <h2>✅ Use Cases</h2>
         <ul>
