--- a/patterns/design_hashmap_cheatsheet.html
+++ b/patterns/design_hashmap_cheatsheet.html
@@ -61,7 +61,9 @@ class MyHashMap {
     }
 }
 </code></pre>
-
+<button onclick="window.location.href='../animations/design_hashmap_animation.html'" class="animation-btn">
+    ▶️ View Animation
+</button>
         <h2>✅ Use Cases</h2>
         <ul>
             <li>Implementing custom hash tables</li>
