--- a/patterns/dot_product_of_two_sparse_vectors_cheatsheet.html
+++ b/patterns/dot_product_of_two_sparse_vectors_cheatsheet.html
@@ -36,6 +36,9 @@ class SparseVector {
     }
 }
 </code></pre>
+<button onclick="window.location.href='../animations/dot_product_of_two_sparse_vectors_animation.html'" class="animation-btn">
+    ▶️ View Animation
+</button>
 
         <h2>✅ Use Cases</h2>
         <ul>
