--- a/patterns/number_of_wonderful_substrings_cheatsheet.html
+++ b/patterns/number_of_wonderful_substrings_cheatsheet.html
@@ -36,6 +36,9 @@ class Solution {
     }
 }
 </code></pre>
+<button onclick="window.location.href='../animations/number_of_wonderful_substrings_animation.html'" class="animation-btn">
+    ▶️ View Animation
+</button>
  <div style="margin-bottom:18px;">
         <b>🎥 Video Explanation:</b>
         <a href="https://www.youtube.com/watch?v=1DdmbJj4xLE&ab_channel=codestorywithMIK" target="_blank">
