--- a/patterns/bulls_and_cows_cheatsheet.html
+++ b/patterns/bulls_and_cows_cheatsheet.html
@@ -37,6 +37,9 @@ class Solution {
     }
 }
 </code></pre>
+<button onclick="window.location.href='../animations/bulls_and_cows_animation.html'" class="animation-btn">
+    ▶️ View Animation
+</button>
 
         <h2>✅ Use Cases</h2>
         <ul>
