--- a/patterns/continuous_subarray_sum_cheatsheet.html
+++ b/patterns/continuous_subarray_sum_cheatsheet.html
@@ -36,6 +36,9 @@ class Solution {
     }
 }
 </code></pre>
+<button onclick="window.location.href='../animations/continuous_subarray_sum_animation.html'" class="animation-btn">
+    ▶️ View Animation
+</button>
 <div style="margin-bottom:18px;">
             <b>🎥 Video Explanation:</b>
             <a href="https://www.youtube.com/watch?v=OKcrLfR-8mE&ab_channel=NeetCode" target="_blank">
