--- a/patterns/find_duplicate_file_in_system_cheatsheet.html
+++ b/patterns/find_duplicate_file_in_system_cheatsheet.html
@@ -41,6 +41,9 @@ class Solution {
     }
 }
 </code></pre>
+<button onclick="window.location.href='../animations/find_duplicate_file_in_system_animation.html'" class="animation-btn">
+    ▶️ View Animation
+</button>
 
         <h2>✅ Use Cases</h2>
         <ul>
