--- a/patterns/find_longest_self_contained_substring_cheatsheet.html
+++ b/patterns/find_longest_self_contained_substring_cheatsheet.html
@@ -33,6 +33,9 @@ class Solution {
     }
 }
 </code></pre>
+<button onclick="window.location.href='../animations/find_longest_self_contained_substring_animation.html'" class="animation-btn">
+    ▶️ View Animation
+</button>
 
         <h2>✅ Use Cases</h2>
         <ul>
