--- a/patterns/fraction_to_recurring_decimal_cheatsheet.html
+++ b/patterns/fraction_to_recurring_decimal_cheatsheet.html
@@ -48,7 +48,9 @@ class Solution {
     }
 }
 </code></pre>
-
+<button onclick="window.location.href='../animations/fraction_to_recurring_decimal_animation.html'" class="animation-btn">
+    ▶️ View Animation
+</button>
         <h2>✅ Use Cases</h2>
         <ul>
             <li>Converting fractions to decimal strings</li>
