--- a/patterns/high_five_cheatsheet.html
+++ b/patterns/high_five_cheatsheet.html
@@ -39,6 +39,9 @@ class Solution {
     }
 }
 </code></pre>
+<button onclick="window.location.href='../animations/high_five_animation.html'" class="animation-btn">
+    ▶️ View Animation
+</button>
 
         <h2>✅ Use Cases</h2>
         <ul>
