--- a/patterns/isomorphic_strings_cheatsheet.html
+++ b/patterns/isomorphic_strings_cheatsheet.html
@@ -36,7 +36,9 @@ class Solution {
     }
 }
 </code></pre>
-
+<button onclick="window.location.href='../animations/isomorphic_strings_animation.html'" class="animation-btn">
+    ▶️ View Animation
+</button>
         <h2>✅ Use Cases</h2>
         <ul>
             <li>Checking if two strings have a one-to-one character mapping</li>
