--- a/patterns/logger_rate_limiter_cheatsheet.html
+++ b/patterns/logger_rate_limiter_cheatsheet.html
@@ -34,6 +34,9 @@ class Logger {
     }
 }
 </code></pre>
+<button onclick="window.location.href='../animations/logger_rate_limiter_animation.html'" class="animation-btn">
+    ▶️ View Animation
+</button>
 
         <h2>✅ Use Cases</h2>
         <ul>
