--- a/patterns/longest_happy_prefix_cheatsheet.html
+++ b/patterns/longest_happy_prefix_cheatsheet.html
@@ -36,6 +36,9 @@ class Solution {
     }
 }
 </code></pre>
+<button onclick="window.location.href='../animations/longest_happy_prefix_v2_animation.html'" class="animation-btn">
+    ▶️ View Animation
+</button>
 
         <h2>✅ Use Cases</h2>
         <ul>
