--- a/patterns/next_greater_element_i_cheatsheet.html
+++ b/patterns/next_greater_element_i_cheatsheet.html
@@ -36,6 +36,9 @@ class Solution {
     }
 }
 </code></pre>
+<button onclick="window.location.href='../animations/next_greater_element_i_animation.html'" class="animation-btn">
+    ▶️ View Animation
+</button>
 
         <h2>✅ Use Cases</h2>
         <ul>
