--- a/patterns/number_of_distinct_islands_cheatsheet.html
+++ b/patterns/number_of_distinct_islands_cheatsheet.html
@@ -45,6 +45,9 @@ class Solution {
     }
 }
 </code></pre>
+<button onclick="window.location.href='../animations/number_of_distinct_islands_animation.html'" class="animation-btn">
+    ▶️ View Animation
+</button>
 
         <h2>✅ Use Cases</h2>
         <ul>
