--- a/patterns/total_appeal_of_a_string_cheatsheet.html
+++ b/patterns/total_appeal_of_a_string_cheatsheet.html
@@ -32,6 +32,9 @@ class Solution {
     }
 }
 </code></pre>
+<button onclick="window.location.href='../animations/total_appeal_of_a_string_animation.html'" class="animation-btn">
+    ▶️ View Animation
+</button>
 
         <h2>✅ Use Cases</h2>
         <ul>
