--- a/patterns/unique_number_of_occurrences_cheatsheet.html
+++ b/patterns/unique_number_of_occurrences_cheatsheet.html
@@ -27,6 +27,9 @@ class Solution {
     }
 }
 </code></pre>
+<button onclick="window.location.href='../animations/unique_number_of_occurrences_animation.html'" class="animation-btn">
+    ▶️ View Animation
+</button>
 
         <h2>✅ Use Cases</h2>
         <ul>
